--- a/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/tagihan.fxml
@@ -14,22 +14,35 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.TagihanController">
+<AnchorPane prefHeight="1000.0" prefWidth="1110.0" stylesheets="@../../css/tagihan.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.TagihanController">
    <children>
       <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
          <children>
-            <HBox prefHeight="68.0" prefWidth="1070.0">
+            <HBox prefHeight="104.0" prefWidth="1070.0">
                <children>
-                  <VBox alignment="BOTTOM_LEFT" prefHeight="107.0" prefWidth="345.0" spacing="20.0">
+                  <VBox alignment="BOTTOM_LEFT" prefHeight="83.0" prefWidth="1151.0" spacing="10.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="TAGIHAN" wrappingWidth="288.986328125">
-                           <font>
-                              <Font name="Georgia Bold" size="44.0" />
-                           </font>
-                        </Text>
+                        <VBox style="-fx-border-color: black; -fx-border-width: 0 0 3 0;">
+                           <children>
+                              <HBox spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="51.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/statustagihan-home.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="TAGIHAN" wrappingWidth="288.986328125">
+                                       <font>
+                                          <Font name="Georgia Bold" size="44.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Daftar Tagihan Terbuat">
                            <font>
                               <Font name="Georgia" size="20.0" />
@@ -39,7 +52,7 @@
                   </VBox>
                </children>
             </HBox>
-            <VBox prefHeight="883.0" prefWidth="1070.0" spacing="10.0">
+            <VBox prefHeight="847.0" prefWidth="1070.0" spacing="10.0">
                <children>
                   <AnchorPane prefHeight="31.0" prefWidth="971.0">
                      <children>
@@ -53,7 +66,7 @@
                                        </font>
                                     </TextField>
                                     <ComboBox fx:id="categoryBox" prefHeight="26.0" prefWidth="132.0" promptText="Categories" style="-fx-background-color: white; -fx-border-color: #c8c8c8; -fx-border-width: 0 1 0 1 2;" />
-                                    <Button fx:id="btnSearch" mnemonicParsing="false" onAction="#onSearch" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: white;">
+                                    <Button fx:id="btnSearch" mnemonicParsing="false" onAction="#onSearch" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: transparent;">
                                        <graphic>
                                           <ImageView fitHeight="23.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -68,7 +81,7 @@
                         </AnchorPane>
                         <HBox alignment="TOP_RIGHT" layoutX="571.0" layoutY="-36.0" prefHeight="36.0" prefWidth="499.0" spacing="10.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="571.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
                            <children>
-                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="44.0" prefWidth="105.0" text="Add">
+                              <Button fx:id="btnAdd" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="44.0" prefWidth="105.0" style="-fx-background-color: black; -fx-background-radius: 8 8 8 8;" text="Add" textFill="WHITE">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -77,7 +90,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goUpdate" prefHeight="44.0" prefWidth="105.0" text="Update">
+                              <Button fx:id="btnUpdate" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goUpdate" prefHeight="44.0" prefWidth="105.0" style="-fx-background-color: black; -fx-background-radius: 8 8 8 8;" text="Update" textFill="WHITE">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -86,7 +99,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#onRefresh" prefHeight="44.0" prefWidth="105.0" text="Refresh">
+                              <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#onRefresh" prefHeight="44.0" prefWidth="105.0" style="-fx-background-color: black; -fx-background-radius: 8 8 8 8;" text="Refresh" textFill="WHITE">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
