--- a/src/main/resources/com/project/app/fxml/contents/homestaff.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/homestaff.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.HomeStaffController">
+<AnchorPane prefHeight="1000.0" prefWidth="1110.0" stylesheets="@../../css/homestaff.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.HomeStaffController">
    <children>
       <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
@@ -69,10 +69,17 @@
                                     </Text>
                                     <HBox alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="711.0">
                                        <children>
-                                          <Button mnemonicParsing="false" onAction="#handleAddPenawaran" prefHeight="38.0" prefWidth="225.0" text="Add New Penawaran">
+                                          <Button graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleAddPenawaran" prefHeight="38.0" prefWidth="225.0" style="-fx-background-color: black; -fx-background-radius: 8 8 8 8;" text="Add New Penawaran" textFill="WHITE">
                                              <font>
                                                 <Font name="Georgia" size="15.0" />
                                              </font>
+                                             <graphic>
+                                                <ImageView fitHeight="37.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../images/plus-penawaran.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
                                           </Button>
                                        </children>
                                     </HBox>
@@ -100,10 +107,17 @@
                                     </Text>
                                     <HBox alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="711.0">
                                        <children>
-                                          <Button mnemonicParsing="false" onAction="#handleAddTagihan" prefHeight="38.0" prefWidth="225.0" text="Add New Tagihan">
+                                          <Button graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleAddTagihan" prefHeight="38.0" prefWidth="225.0" style="-fx-background-color: black; -fx-background-radius: 8 8 8 8;" text="Add New Tagihan" textFill="WHITE">
                                              <font>
                                                 <Font name="Georgia" size="15.0" />
                                              </font>
+                                             <graphic>
+                                                <ImageView fitHeight="37.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../images/plus-penawaran.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
                                           </Button>
                                        </children>
                                     </HBox>
@@ -128,7 +142,7 @@
                                                       <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                          <children>
                                                             <TextField fx:id="searchField" prefHeight="31.0" prefWidth="543.0" promptText="Search" style="-fx-background-color: transparent;" />
-                                                            <Button fx:id="btnSearch" mnemonicParsing="false" prefHeight="34.0" prefWidth="6.0" style="-fx-background-color: transparent;">
+                                                            <Button fx:id="btnSearch" mnemonicParsing="false" prefHeight="25.0" prefWidth="40.0" style="-fx-background-color: transparent; -fx-border-width: 0 0 0 1; -fx-border-color: #c8c8c8;">
                                                                <graphic>
                                                                   <ImageView fitHeight="23.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
@@ -174,7 +188,7 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="392.0">
                                                    <children>
-                                                      <ComboBox fx:id="comboRentang" prefHeight="42.0" prefWidth="150.0" />
+                                                      <ComboBox fx:id="comboRentang" prefHeight="42.0" prefWidth="150.0" promptText="Rentang Waktu" />
                                                    </children>
                                                 </HBox>
                                              </children>
